test/types/file/unableToOpenFile.good
_test_cannotOpenMe.txt
read
unableToOpenFile.chpl:5: error: halt reached - ***Error: Unable to open "./_test_cannotOpenMe.txt": No such file or directory***
